<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/Layout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="42dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/textView">
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:gravity="center"
                android:textIsSelectable="false" />

            <EditText
                android:id="@+id/etPasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:gravity="center"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:id="@+id/bLogin"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:onClick="ingresar"/>

                <Button
                    android:id="@+id/bRegistrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registrarse"
                    android:onClick="registrarse"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorAccent"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
