<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    android:id="@+id/ru">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/Layout"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/scrollView"
            android:layout_alignStart="@+id/scrollView">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Registrarse"
                android:textSize="42dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/textView"></LinearLayout>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:gravity="center"
                android:textIsSelectable="false" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:gravity="center"
                android:textIsSelectable="false" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_gravity="center"
                android:startYear="2020"
                android:endYear="1990"
                android:id="@+id/dp01">
            </DatePicker>

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:gravity="center"
                android:inputType="numberPassword"
                />

            <EditText
                android:id="@+id/etPassR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:gravity="center"
                android:inputType="numberPassword"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*La contraseña debe contener 4 digitos\n"
                android:textSize="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorAccent"
                    android:id="@+id/button"
                    android:layout_gravity="bottom|right|end"
                    android:onClick="enviar"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>